<resources>

    <string name="app_name">Golf Tournament Pal</string>
    <string name="app_name_shortcut">Golf Pal</string>
    <string name="search_hint">Search Tournaments</string>
    <!-- Menu -->
    <string name="mypage">My Profile</string>
    <string name="myfriends">My Friends</string>
    <string name="mytournaments">My Tournaments</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="myprofile">My Profile</string>
    <string name="gkremail">gr@gr.is</string>
    <string name="golfclub">Golfklúbbur Reykjavíkur</string>

    <!-- Login Activity -->
    <string name="loginapp">Welcome to Golf Tournament Pal</string>
    <string name="pleaselogin">Please Log In:</string>
    <string name="loginbutton">Log In</string>
    <string name="enterSSN">Social Security Number</string>
    <string name="enterPW">Password</string>
    <string name="register">Sign Up</string>
    <string name="noaccount">Need an account?</string>

    <!-- Register Activity -->
    <string name="registerinputs">Please fill out all information:</string>
    <string name="newUserPassword1">Password</string>
    <string name="newUserPassword2">Confirm Password</string>

    <!-- Main activity -->
    <string name="homeTexts">Welcome to Golf Tournament Pal</string>
    <string name="homeText2">Select what you want to do:</string>
    <string name="createTournamentbutton">Create a Tournament</string>
    <string name="mypagebutton">My Profile</string>
    <string name="resultsbutton">Tournaments</string>
    <string name="username">Username</string>
    <string name="loggedinas">Welcome USERNAME,</string>
    <string name="chooseaction">please select what you want to view or find more actions in the menu on the left:</string>

    <!--- Home activity -->
    <string name="tournament">Create a tournament</string>
    <string name="selectTournament">Please select the format of your new tournament:</string>
    <string name="matchPlayTournament">Match Play Tournament</string>
    <string name="scoreboardTournament">Scoreboard Tournament</string>

    <!--- MatchPlayCreatorActivity and ScoreboardCreatorActivity -->
    <string name="matchPlayCreate">Match Play Tournament</string>
    <string name="TournamentFill">Please fill out information about the tournament:</string>
    <string name="scoreboardCreate">Scoreboard Tournament</string>
    <string name="nameInput">Tournament Name</string>
    <string name="courseName">Course</string>
    <string name="nextStepButton">Next step</string>
    <string name="areBrackets">Are brackets?</string>
    <string name="numberInBrackets">How many participants exit the bracket?</string>
    <string name="numberInBrackets2">How many participants in bracket?</string>
    <string name="numberOfRounds">How many rounds would you like to play?</string>
    <string name="dateName">Start date:</string>
    <string name="participantadder">Added Participants:</string>

    <string-array name="bracketNumbers">
        <item>1 participant</item>
        <item>2 participants</item>
    </string-array>

    <!-- BracketActivity   -->
    <string name="bracketText">Brackets</string>
    <string name="bracketsText2">Brackets Information:</string>
    <string name="goBackBracketButton">Go Back</string>
    <string name="points">Points</string>
    <string name="bracketinfo">Add results where needed to continue</string>

    <!-- PlayOffTreeActivity   -->
    <string name="playOffTreeText">Play Off Tree</string>
    <string name="playOffTreeText2">Play Off Tree Information:</string>
    <string name="goBackPlayOffTreeButton">Go Back</string>

    <!-- Tables -->
    <string name="tournamenttable">Tournament</string>
    <string name="datetable">Date</string>
    <string name="coursetable">Course</string>
    <string name="nametable">Name</string>
    <string name="ssntable">SSN</string>
    <string name="emailtable">Email</string>
    <string name="handicaptable">Handicap</string>
    <string name="matchplayer">Participant</string>
    <string name="matchdate">Date</string>
    <string name="roundstable">Round</string>

    <!-- MatchPlayInfoActivity and ScoreboardInfoActivity -->
    <string name="matchPlayInfo">MatchPlay Tournament Information</string>
    <string name="scoreboardInfo">Scoreboard Tournament Information</string>
    <string name="matchPlaytournamentInfo">Tournament Information:</string>
    <string name="scoreboardtournamentInfo">Tournament Information:</string>
    <string name="matchplayparticipantInfo">Participant Information:</string>
    <string name="scoreboardparticipantInfo">Participant Information:</string>
    <string name="seeresultsbutton">See Results</string>
    <string name="matchplayMatchInfo">Match Information:</string>
    <string name="viewbrackets">View Brackets</string>
    <string name="viewplayofftree">View Play Off Tree</string>
    <string name="scoreboardname">Match Information:</string>
    <string name="viewscoreboard">View Scoreboard</string>

    <!--- AddParticipant -->
    <string name="addparticipant">Add New Friends</string>
    <string name="addfriends">Add Friends</string>
    <string name="toscoreboard">To the Scoreboard Tournament</string>
    <string name="tomatchplay">To the Match Play Tournament</string>
    <string name="searchfriend">Search for friends:</string>
    <string name="participantFill">Participant Information:</string>
    <string name="addParticipantText">Add participants to the tournament</string>
    <string name="handicapText">Handicap</string>
    <string name="handicapdot">Handicap:</string>
    <string name="number">0.0</string>
    <string name="socialText">Social-number</string>
    <string name="participantNameInput">Name</string>
    <string name="participantMail">E-mail</string>
    <string name="addParticipantButton">Add participant</string>

    <!-- ResultsActivity -->
    <string name="results">Results</string>
    <string name="searchresults">Search for a tournament:</string>

    <!-- MyProfileActivity -->
    <!-- MyProfileActivity -->
    <string name="seefriends">View My Friends</string>
    <string name="seetournament">View My Tournaments</string>
    <string name="editPen">editPen</string>
    <string name="myProfilePic">myProfilePic</string>

    <!-- MyTournamentsActivity -->

    <string name="noTournament">"You haven't participated in any tournaments yet!</string>

    <!-- MyFriendsActivity -->
    <string name="view">View</string>
    <string name="SSN2">SSN: </string>
    <string name="handicap2">Hcp: </string>
    <string name="noFriends">"You don't have any friends :("</string>

    <!-- Scoreboard Activity -->
    <string name="scoreboard">Scoreboard</string>
    <string name="rounds">Round:</string>
    <string name="total">Total:</string>

    <string name="scoreboardinput">Input Scores</string>
    <string name="savebutton">Save</string>

    <!-- Scoreboard input view -->
    <string name="h1">H1</string>
    <string name="h2">H2</string>
    <string name="h3">H3</string>
    <string name="h4">H4</string>
    <string name="h5">H5</string>
    <string name="h6">H6</string>
    <string name="h7">H7</string>
    <string name="h8">H8</string>
    <string name="h9">H9</string>
    <string name="h10">H10</string>
    <string name="h11">H11</string>
    <string name="h12">H12</string>
    <string name="h13">H13</string>
    <string name="h14">H14</string>
    <string name="h15">H15</string>
    <string name="h16">H16</string>
    <string name="h17">H17</string>
    <string name="h18">H18</string>

    <string name="inputWarning">Please enter input greater than 0!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_play_off_tree">PlayOffTree</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- AddResultsActivity -->
    <string name="addresults">Add Result</string>
    <string name="saveresultsbutton">Save Result</string>
    <string name="addresultstext">Who won?</string>
    <string name="whatwasresults">What was the result?</string>
    <string name="resultshint">2/1 or 22.hole</string>
    <string name="and">and</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_prufa">prufa</string>
    <string name="title_activity_prufa2nav">prufa2nav</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_brackets2">BracketsActivity2</string>
    <string name="title_activity_my_tournaments">MyTournaments</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_my_friends">MyFriendsActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="title_activity_results2">ResultsActivity2</string>
    <string name="title_activity_scoreboard_info2">ScoreboardInfoActivity2</string>
    <string name="title_activity_match_play_info2">MatchPlayInfoActivity2</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
    <string name="title_activity_score_input_view">ScoreInputViewActivity</string>
    <string name="title_activity_should_be_main2">ShouldBeMain2</string>

    <string name="logout">Log Out</string>
    <string name="title_activity_participant_adder_mp">ParticipantAdderMPActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_bla">blaActivity</string>

    <string name="addFriendsParticipants">Add Friend</string>
    <string name="addNewParticipants">Add New</string>

    <string name="baseURL">localhost:8080</string>
    <string name="title_activity_participants_adder">ParticipantsAdderActivity</string>
    <string name="title_activity_participant_adder_main">ParticipantAdderMainActivity</string>
    <string name="title_activity_hjalp">HjalpActivity</string>
    <string name="title_activity_friend_profile">FriendProfileActivity</string>

    <string name="add_me">Add me to this tournament</string>
    <string name="noBrackets">This tournament has no brackets. Try looking at the playoff tree</string>
    <string name="bracketbutton">Create a Playoff tree based on these results</string>

    <string name="addMatchResults">Add results</string>
    <string name="playertobedeclared">Player Still To Be Declared</string>
    <string name="handicaptobedeclared">Handicap</string>
    <string name="presstodelete">Press any participant to remove</string>
    <string name="seefriendprofile">Select a friend in the list to open their profile page</string>
    <string name="seetournament3">Select a tournament from the list to see the info</string>

</resources>
