<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/nav_createTournament"
            android:icon="@drawable/add"
            android:title="@string/createTournamentbutton"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/user"
            android:title="@string/mypage"/>
        <item
            android:id="@+id/nav_mytournaments"
            android:icon="@drawable/tournament"
            android:title="@string/mytournaments"/>
        <item
            android:id="@+id/nav_myfriends"
            android:icon="@drawable/friends"
            android:title="@string/myfriends"/>
    </group>
    <group
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <item
            android:id="@+id/nav_search"
            android:actionViewClass="android.support.v7.widget.SearchView"
            android:icon="@drawable/search"
            android:title="@string/search"/>
    </group>
</menu>


