<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_match_play_creator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top"
    tools:context="com.example.halla.golftournamentpal.MatchPlayCreator">

    <TextView
        android:text="@string/addParticipantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addParticipantText"
        android:textColor="@color/mainTextColor"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/participantFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/participantFill"
        android:textColor="@color/secondaryTextColor"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/participantNameInput"
        android:layout_gravity="start"
        android:hint="@string/participantNameInput"
        android:linksClickable="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/handicap"
        android:hint="@string/handicapText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/socialNumber"
        android:hint="@string/socialText"
        android:maxLength="10"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/participantMail"
        android:hint="@string/participantMail" />

    <Button
        android:text="@string/addParticipantButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addParticipantButton"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/buttonTextColor"
        android:layout_gravity="end" />


</LinearLayout>
