<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_match_play_creator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="top|center"
            tools:context="com.example.halla.golftournamentpal.views.ParticipantAdderActivity">


    <TextView
        android:text="@string/addParticipantText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addParticipantText"
        android:textColor="@color/mainTextColor"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:gravity="center|top"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_weight="0"/>

    <TextView
        android:text="@string/participantFill"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/participantFill"
        android:layout_gravity="start"
        android:layout_marginBottom="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/secondaryTextColor"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/participantNameInput"
        android:layout_gravity="start"
        android:hint="@string/participantNameInput"
        android:linksClickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/handicap"
        android:hint="@string/handicapText"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/socialNumber"
        android:hint="@string/socialText"
        android:maxLength="10"
        android:focusable="false"
        android:focusableInTouchMode="false" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/participantMail"
        android:hint="@string/participantMail"
        android:focusable="false"
        android:focusableInTouchMode="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:text="@string/addParticipantButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addParticipantButton"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/buttonTextColor"
            android:layout_gravity="end"
            android:onClick="addparticipant"
            android:layout_marginBottom="20dp"/>

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/buttonTextColor">

                <TextView
                    android:padding="3dip"
                    android:text="@string/nametable"
                    android:textColor="@color/buttonTextColor" />

                <TextView
                    android:gravity="center"
                    android:padding="3dip"
                    android:text="@string/ssntable"
                    android:textColor="@color/buttonTextColor" />

                <TextView
                    android:gravity="center"
                    android:padding="3dip"
                    android:text="@string/emailtable"
                    android:textColor="@color/buttonTextColor" />

                <TextView
                    android:gravity="end"
                    android:padding="3dip"
                    android:text="@string/handicaptable"
                    android:textColor="@color/buttonTextColor" />
            </TableRow>
        </TableLayout>

            <Button
                android:text="@string/nextStepButton"
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nextStepParticipant"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/buttonTextColor"
                android:layout_gravity="end"
                android:onClick="gotonext"
                android:layout_marginBottom="20dp" />


       </LinearLayout>
</LinearLayout>

</ScrollView>
