<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_createTournament"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/createTournamentbutton" />
        <item
            android:id="@+id/nav_viewTournaments"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/viewTournament" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/login"
            android:icon="@android:drawable/ic_menu_save"/>

    </group>

    <group android:checkableBehavior="single">
    <item>
        <menu>
            <item
                android:id="@+id/nav_mypage"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/mypage" />
            <item
                android:id="@+id/nav_myfriends"
                android:icon="@drawable/ic_menu_allfriends"
                android:title="@string/myfriends" />
        </menu>
    </item>
    </group>
</menu>
