<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:id="@+id/activity_home"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:focusable="true"
                  android:focusableInTouchMode="true"
                  tools:context="com.example.halla.golftournamentpal.views.RegisterActivity">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/loginapp"
            android:textColor="@color/mainTextColor"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/registerinputs"
            android:textColor="@color/secondaryTextColor"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/textView3"/>

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ems="10"
            android:hint="@string/participantNameInput"
            android:inputType="textPersonName"
            android:linksClickable="true"/>


        <EditText
            android:id="@+id/newUserSSN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterSSN"
            android:inputType="numberDecimal"
            android:maxLength="10"/>

        <EditText
            android:id="@+id/newUserHandicap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/handicapText"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/newUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/participantMail"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/newUserPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newUserPassword1"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/newUserPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/newUserPassword2"
            android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="@color/buttonTextColor"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>